--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "colors": "^1.1.2",
     "commander": "^2.9.0",
-    "opent2t": "^1.0.1"
+    "express": "^4.14.0",
+    "inquirer": "^1.1.3",
+    "open": "0.0.5",
+    "opent2t": "^1.0.1",
+    "q": "^1.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
