--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "inquirer": "^1.1.3",
     "open": "0.0.5",
     "opent2t": "^1.0.1",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "xmldom": "^0.1.22",
+    "xpath": "0.0.23"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
