--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "express": "^4.14.0",
+    "glob": "^7.1.1",
     "inquirer": "^1.1.3",
     "open": "0.0.5",
     "opent2t": "^1.0.1",
