--- a/opent2t-reference/package.json
+++ b/opent2t-reference/package.json
@@ -15,7 +15,9 @@
     "express": "^4.14.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "opent2t": "^1.0.2",
+    "q": "^1.4.1"
   },
   "devDependencies": {
     "electron-reload": "^1.1.0"
