Made the output and details panels resizable in the reference app.

--- a/opent2t-reference/package.json
+++ b/opent2t-reference/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.1",
+    "angular-resizable": "^1.2.0",
     "bootstrap": "^3.3.7",
     "colors": "^1.1.2",
     "express": "^4.14.1",
