--- a/package.json
+++ b/package.json
@@ -6,16 +6,24 @@
     "opent2t": "./index.js"
   },
   "dependencies": {
+    "angular": "^1.6.1",
+    "angular-resizable": "^1.2.0",
+    "bootstrap": "^3.3.7",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
     "glob": "^7.1.1",
     "inquirer": "^1.1.3",
+    "jquery": "^3.1.1",
     "open": "0.0.5",
     "opent2t": "^1.0.1",
     "q": "^1.4.1",
     "xmldom": "^0.1.22",
     "xpath": "0.0.23"
+  },
+  "devDependencies": {
+    "electron-reload": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
