Changed the config files to be based on the user supplied name rather than the hub translator package name. This allows us to have multiple config files for the same hub type.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "open": "0.0.5",
     "opent2t": "^1.0.1",
     "q": "^1.4.1",
+    "sanitize-filename": "^1.6.1",
     "xmldom": "^0.1.22",
     "xpath": "0.0.23"
   },
