Allow the CLI and reference app to be installed without needing to clone the repo.

--- a/reference-app/bower.json
+++ b/reference-app/bower.json
@@ -3,7 +3,7 @@
   "description": "opent2t reference app",
   "main": "main.js",
   "authors": [
-    "Chuck Ferring <chuckfer@microsoft.com>"
+    "opent2t"
   ],
   "license": "ISC",
   "homepage": "",
