--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.1",
   "description": "Command Line Interface (CLI) for Open Translators to Things.",
   "bin": {
-    "opent2t": "./index.js"
+    "opent2t-cli": "./index.js",
+    "opent2t-ui": "./reference-app/bin/ref-app"
   },
   "dependencies": {
-    "angular": "^1.6.1",
-    "angular-resizable": "^1.2.0",
-    "bootstrap": "^3.3.7",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "electron": "^1.6.2",
     "express": "^4.14.0",
-    "font-awesome": "^4.7.0",
+    "findup-sync": "^0.4.3",
     "glob": "^7.1.1",
     "inquirer": "^1.1.3",
-    "jquery": "^3.1.1",
     "open": "0.0.5",
     "opent2t": "^1.0.1",
     "q": "^1.4.1",
@@ -27,7 +25,8 @@
     "electron-reload": "^1.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "refapp": "electron reference-app"
   },
   "preferGlobal": true,
   "repository": {
