A few bug fixes and small changes to make using the reference app a bit easier.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "refapp": "electron reference-app"
+    "refapp": "electron reference-app",
+    "refapp-debug": "electron reference-app --debug"
   },
   "preferGlobal": true,
   "repository": {
